レスポンシブ修正フリーランス新規登録元に戻す

--- a/freelancer_applied_jobs.html
+++ b/freelancer_applied_jobs.html
@@ -142,7 +142,7 @@
 
         .jobs-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+            grid-template-columns: 1fr; /* 1行に1つ表示 */
             gap: 2rem;
         }
 
